html code re writed

--- a/index.html
+++ b/index.html
@@ -9,20 +9,12 @@
   <h1 id="app-heading">To Do</h1>
   <p class="to-do-description">Reminds Everything</p>
   <div id="to-do-app">
-    <div id="to-do-container">
-      <div id="input-container">
-        <span class="logo"></span>
-        <input type="text" id="user-input" placeholder="what you think">
-        <!--adding button happening here-->
-      </div>
-      <ul id="to-do">
-        <!--wishes added here-->
-      </ul>
-    </div>
+    <ul id="todo">
 
-    <div id="adding-btn-container">
-      <button id="adding-btn">+</button>
-    </div>
+    </ul>
+  </div>
+  <div id="button-container">
+    <button class="adding-btn">+</button>
   </div>
 </body>
 </html>
