to-do list app container is working in a just demo mode

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1 id="app-heading">To Do</h1>
   <p class="to-do-description">Reminds Everything</p>
   <div id="to-do-app">
+    <input type="text" id="user-input">
     <ul id="todo">
 
     </ul>
@@ -16,5 +17,6 @@
   <div id="button-container">
     <button class="adding-btn">+</button>
   </div>
+  <script src="js/app.js"></script>
 </body>
 </html>
