--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To Do list app</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <h1 id="app-heading">To Do</h1>
