now all things is working fine'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1 id="app-heading">To Do</h1>
   <p class="to-do-description">Reminds Everything</p>
   <div id="to-do-app">
-    <input type="text" id="user-input">
+    <input type="text" id="user-input" placeholder="what's up!">
     <ul id="todo">
 
     </ul>
